# frc-7028-2026

./: .gitignore  CMakeLists.txt  build.gradle
.github/workflows/: build.yml  physics-sim-build.yml
SOTM/: Interpolator.java
SOTM/src/: BallisticEnvironmentProfile.h  BallisticProjectileState.h  BallisticSimulatorResolutionProfile.h  Simulator.cpp  Simulator.h  main.cpp  main.h
limelight_configs/: Limelight_1_Calibration.cal  Limelight_2_Calibration.cal  Limelight_3_Calibration.cal
physics-sim/: .gitignore  build.gradle  gradle.properties  settings.gradle  shell.nix  trajectory1.csv  trajectory10.csv  trajectory11.csv  trajectory12.csv  trajectory13.csv  trajectory14.csv  trajectory15.csv  trajectory16.csv  trajectory17.csv  trajectory18.csv  trajectory19.csv  trajectory2.csv  trajectory20.csv  trajectory21.csv  trajectory22.csv  trajectory23.csv  trajectory24.csv  trajectory25.csv  trajectory26.csv  trajectory27.csv  trajectory28.csv  trajectory29.csv  trajectory3.csv  trajectory30.csv  trajectory31.csv  trajectory32.csv  trajectory33.csv  trajectory34.csv  trajectory35.csv  trajectory36.csv  trajectory37.csv  trajectory38.csv  trajectory39.csv  trajectory4.csv  trajectory40.csv  (+43 more)
src/main/deploy/: elastic-layout.json
src/main/deploy/pathplanner/: settings.json
src/main/deploy/pathplanner/autos/: AprilTag Test.auto  Depot.auto  Double Dip.auto  Double Middle Auto.auto  Double Middle.auto  Hero.auto  Left Depot.auto  Left Double Dip.auto  Right Crash n Pass.auto  Right Double Dip.auto  Right Outpost Double Dip.auto  Right Outpost Double Dipp.auto  (+1 more)
(+133 files in other folders)
